<resources>
    <string name="app_name">SmartBudget</string>
    <string name="income_set_budget">Budget</string>
    <string name="Make_new_envelopes">Make new Envelopes, edit existing ones, or delete thm on this screen.</string>
    <string name="you_can_also">You can also change your Envelope order, budget period or budget amount. Then you can change the current balance in your Envelope by going to the Fill Envelopes screen.</string>
    <string name="env_summary">Each envelope shows the balance remaining. The status bars show how
        "full" or (un -full…) your envelope is.\n\nTap the envelope bars to see a list of transactions
        in that envelope. From there you can edit a transaction.\n\nTo control the order of the envelopes
        on this screen find "Edit Envelopes" in the overflow menu or visit the website and drag and drop
        the envelopes on the Add/Edit Envelopes page.</string>
    <string name="schedule">Schedule this… (Requires a registered household. Head to the Envelopes screen to register.)</string>
    <string name="text_black_line">When your budgeting period is set to monthly, weekly, or semi-monthly,
        the black line on the expanded view shows you where "today" is.\n\nIf the green bar is to the right
        of the black line you are on target! If not, time to play catch up…\n\nYou can change your budgeting period in Settings.</string>
    <string name="add_to_quick">Add to Quick Transactions widget\n(edit from Settings)</string>
    <string name="payees">SmartBudget will suggest recent Payees that you have entered. Also, if you record at point-of-sale
        SmartBudget will help you the next time by suggesting Payees you have used that are located near where you are.</string>
    <string name="refunds">Use the Expense/Credit toggle to record these.</string>
    <string name="tags">If you want to add a tag to an expense, you can use the "#" sign in the Notes field. For example,
        to mark tax-deductible expenses, put "#tax" in the notes. Or for expenses related to your car, tag it "#honda".</string>
    <string name="location">SmartBudget will remember your transaction location on your phone and auto-suggest the Payee, Envelope
        and Account the next time you are in the area. You can enable this feature in Settings.</string>
    <string name="fill_from_income">Enter your paycheck as a new income. Choose "Fill Each Envelope"
        to fill your Envelope right away, or "Keep Unallocated\" to save it for later.</string>
    <string name="fill_from_unallocated">Fill your Envelope with money you previously kept Unallocated.</string>
    <string name="add_or_set">Choose "Add" to rollover an Envelope\'s current balance and add more to it
        \n\nChoose "Set" to not rollover and set the balance to a particular amount.
        \n\nFor example, if an Envelope has a current balance of 10.
        \n\nAdd 15 will bring the balance to 25.
        \n\nSet 15 will bring the balance to 15.</string>
    <string name="delete_diaog_added">Are you sure you want to delete this transaction ?</string>
    <string name="text1">The Set value should be higher than the actual budget</string>
</resources>
