<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context="com.example.micua.smartbudget.HelpAddTransaction">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Recording a transaction"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Payees."
        android:textStyle="bold"
        android:textColor="@color/text"
        android:textSize="15sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payees"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Refunds, returns."
        android:textStyle="bold"
        android:textColor="@color/text"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refunds"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tags."
        android:textStyle="bold"
        android:textColor="@color/text"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tags"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Remember your location."
        android:textStyle="bold"
        android:textColor="@color/text"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="15sp" />

</LinearLayout>
